# data-breaker

./: Cargo.toml  README.md  mise.toml
.github/workflows/: ci.yml  release-linux-aarch64.yml  release-linux-x86_64.yml  release-macos-aarch64.yml  release-macos-x86_64.yml  release-windows-x86_64.yml  release.yml
src/: config.rs  error.rs  main.rs
src/broker/: beenverified.rs  dummy.rs  mod.rs  registry.rs
src/cli/: broker.rs  delete.rs  mod.rs  registry.rs  report.rs  scan.rs  status.rs
src/db/: migrations.rs  mod.rs  models.rs  queries.rs
src/report/: html.rs  json.rs  mod.rs  terminal.rs
