[package]
name = "data-breaker"
version = "0.2.0"
edition = "2024"
description = "Break what data brokers do — automate personal data removal"
license = "CC-BY-NC-SA-4.0"
repository = "https://github.com/bombfork/data-breaker"
keywords = ["privacy", "data-brokers", "cli", "opt-out"]
categories = ["command-line-utilities"]

[dependencies]
