[package]
name = "data-breaker"
version = "0.3.0"
edition = "2024"
description = "Break what data brokers do — automate personal data removal"
license = "CC-BY-NC-SA-4.0"
repository = "https://github.com/bombfork/data-breaker"
keywords = ["privacy", "data-brokers", "cli", "opt-out"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "6"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
comfy-table = "7"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
